# hacc-io-temp

./: README.md
genric-io/: CMakeLists.txt  GNUmakefile  GenericIO.cxx  GenericIO.h  GenericIOBenchmarkWrite.cxx  README.md  pyproject.toml  setup.py
genric-io/docs/: conf.py  environment.rst  index.rst
genric-io/docs/cpp/: genericio.rst  library.rst
genric-io/docs/executables/: benchmarks.rst  tools.rst
genric-io/docs/python/: class_interface.rst  legacy_python.rst  mpi.rst  readwrite.rst
genric-io/mpi/: CMakeCache.txt  Makefile  cmake_install.cmake
genric-io/mpi/frontend/: GenericIOPrint  GenericIOVerify
genric-io/mpi/mpi/: GenericIOBenchmarkRead  GenericIOBenchmarkWrite  GenericIOPrint  GenericIORewrite  GenericIOVerify
genric-io/python/: CMakeLists.txt  genericio.cpp
genric-io/python/pygio/: __init__.py
